# picoharness

./: .gitignore  README.md  main.py  mm.py  pyproject.toml
backend/: __init__.py  agent.py  api.py  backend.py  converter.py  events.py  sessions.py  system_prompt.py
backend/provider/: __init__.py  provider.py
backend/tools/: __init__.py  base.py  builtin.py
backend/tools/web/: _client.py  browse.py  wikipedia.py
frontend/: app.py  chat_log.py  cli.py  commands.py  config_io.py  doctor_cmd.py  input.py  input_history.py  kitty.py  schema.py  services_cmd.py  style.py  style.tcss  system_prompt.md  widgets.py
frontend/commands/: __init__.py  _internal.py  commands.py
frontend/files/: agent_system_prompt.md  system_prompt.md
frontend/services/: docker-compose.yml
frontend/services/searxng/: .env
frontend/services/searxng/core-config/: settings.yml
frontend/tui/: __init__.py  dialog.py  event_handler.py  renderer.py  state.py
llm/: __main__.py  backend.py  cli.py  client.py  config.py  events.py  state.py  tools.py
llm/core/: backend.py  provider.py
llm/tools/: agent.py  base.py  builtin.py
llm/ui/: __init__.py  client.py
tests/: test_backend.py  test_provider.py  test_sessions.py
tests/tools/web/: test_web.py  test_wikipedia.py
