[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ollama>=0.6.1",
    "omlx",
    "openai>=2.32.0",
    "blessed>=1.20.0",
    "prompt-toolkit>=3.0.52",
    "rich>=13.0",
]
# [project.scripts]
# llm-cli = "llm.cli:cli"

# [tool.uv]
# package = true

# [tool.setuptools.packages.find]
# include = ["llm"]

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "pyright>=1.1.409",
    "ruff>=0.15.10",
    "ty>=0.0.29",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]
[tool.ruff]
line-length=120

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
omlx = { git = "https://github.com/jundot/omlx.git" }

[tool.pyright]
# typeCheckingMode = "strict"