[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "picoharness"
version = "0.1.0"
description = "Local LLM agent with optional Docker-based services"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.5",
    "jinja2>=3.1.6",
    "ollama>=0.6.1",
    "openai>=2.32.0",
    "pydantic>=2.13.2",
    "textual>=8.2.7",
    "tomlkit>=0.11",
    "wikipedia-api>=0.7",
]

[project.scripts]
ph = "frontend.app:cli"

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "ruff>=0.15.10",
    "ty>=0.0.29",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "textual-dev>=1.8.0",
    "vermin>=1.8.0",
]

[tool.ruff]
line-length=120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
# typeCheckingMode = "strict"

[tool.hatch.build.targets.wheel]
packages = ["frontend", "backend"]
